@@ -1,4 +1,4 @@
-.TH VIFM 1 "04 April 2023" "vifm 0.13"
+.TH VIFM 1 "02 May 2023" "vifm 0.13"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -5412,6 +5412,7 @@ Controls what will be saved in the $VIFM/vifminfo file.
    phistory  \- prompt history
    fhistory  \- history of local filter (see description of the "=" normal mode
                command)
+   mchistory \- command line history of menus
    dirstack  \- directory stack overwrites previous stack, unless stack of
                current instance is empty
    registers \- registers content
