@@ -141,9 +141,10 @@ enum
 	VINFO_FHISTORY  = 1 << 13, /* Filter history. */
 	VINFO_PHISTORY  = 1 << 14, /* Prompt history. */
 	VINFO_SHISTORY  = 1 << 15, /* Search history. */
-	VINFO_SAVEDIRS  = 1 << 16, /* Restore last used directories on startup. */
-	VINFO_TABS      = 1 << 17, /* Restore global or pane tabs. */
-	NUM_VINFO       = 18,      /* Number of VINFO_* constants. */
+	VINFO_MCHISTORY = 1 << 16, /* Command-line history of menus. */
+	VINFO_SAVEDIRS  = 1 << 17, /* Restore last used directories on startup. */
+	VINFO_TABS      = 1 << 18, /* Restore global or pane tabs. */
+	NUM_VINFO       = 19,      /* Number of VINFO_* constants. */
 
 	EMPTY_VINFO = 0,                   /* Empty set of flags. */
 	FULL_VINFO  = (1 << NUM_VINFO) - 1 /* Full set of flags. */
