@@ -2,6 +2,9 @@
 
 	Added command-line history to menu mode.
 
+	Added "mchistory" value to 'vifminfo' and 'sessionoptions' option.  It
+	manages storing of command-line history of menus.
+
 	Don't draw right padding on a truncated rightmost column of a transposed
 	ls-like view.
 
